# web3_hd

./: Cargo.toml  shell.nix
cli/: Cargo.toml
cli/src/: cli.rs  commands.rs  error.rs  main.rs  settings.rs  wallet_manager.rs
src/: error.rs  lib.rs
src/types/: balance_state.rs  crypto.rs  hdseed.rs  mod.rs  token_data.rs  wallet_address.rs  wallet_state.rs
src/utils/: key.rs
src/wallet/: mod.rs  tron.rs  types.rs
src/wallet/ethereum/: .address.rs.swp  address.rs  mod.rs
src/wallet/tron/: address.rs  mod.rs
