[package]
name = "web3_hd"
version = "0.1.0"
edition = "2021"
authors = ["Nazgull08"]
description = "small library and hd wallet for ethereum, tron and other EVM-based blockchains"
license = "Apache-2.0"
repository = "https://github.com/nazgull08/web3_hd"
keywords = ["web3","wallet","hd"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "web3_hd"
path = "src/lib.rs"

[[bin]]
name = "web3_hd_signer"
path = "src/main.rs"
