[package]
name = "web3_hd"
version = "0.1.0"
edition = "2021"
authors = ["Nazgull08"]
description = "small library and hd wallet for ethereum, tron and other EVM-based blockchains"
license = "Apache-2.0"
repository = "https://github.com/nazgull08/web3_hd"
keywords = ["web3","wallet","hd"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "web3_hd"
path = "src/lib.rs"

[[bin]]
name = "web3_hd_signer"
path = "src/main.rs"

[dependencies]
bitcoin = "0.31.1"
hex = "0.4.3"
ethers = "2.0.14"
eth_checksum = "0.1.2"
log = "^0.4.21"
thiserror = "^1.0.58"
tiny-bip39 = "1.0.0"
secp256k1 = "^0.28.2"
serde = { version = "1.0.197", features = ["derive"] }
sha3 = "0.9.1"
