[package]
name = "web3_hd_cli"
version = "0.1.0"
edition = "2021"
authors = ["Nazgull08"]
description = "CLI wallet for web3_hd library"
license = "Apache-2.0"
repository = "https://github.com/nazgull08/web3_hd"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
config = "0.14.0"
ethers = "2.0.14"
log = "^0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "^1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
web3_hd = { path = "../library" }
tiny-bip39 = "1.0.0"
